# protein-quest

./: .howfairis.yml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  aidecl.yaml  chain_ambiguity.md  handoff-inject-uniprot-ranges.md  handoff.coherent-chain-uniprot-pair.md  mkdocs.yml  plan.md  plan.orderclustersmembers.md  plan.resolution-length-clustering.md  pyproject.toml
.github/workflows/: aidecl-validate.yml  ci.yml  pages.yml  pypi-publish.yml
docs/: CONTRIBUTING.md  cli.md  cli_doc_hook.py  faq.md  index.md
docs/notebooks/: README.md  alphafold.ipynb  pdbe.ipynb  prov.ipynb  uniprot-grlc.ipynb  uniprot.ipynb
docs/workflow/: workflow.cwl
src/protein_quest/: __version__.py  cli.py  clustering.py  clustering_io.py  converter.py  csv_schema.py  emdb.py  errors.py  filters.py  go.py  io.py  mcp_server.py  parallel.py  sparql.py  ss.py  structure.py  taxonomy.py  uniprot.py  uniprot_chains.py  utils.py
src/protein_quest/alphafold/: __init__.py  confidence.py  entry_summary.py  fetch.py
src/protein_quest/cli/: __init__.py  common.py  convert.py  filter.py  mcp.py  retrieve.py  search.py
src/protein_quest/filters/: __init__.py  chain.py  combined.py  quality.py  residues.py  resolution.py  ss.py
src/protein_quest/pdbe/: clustering.py  fetch.py  io.py  result.py  ws.py
src/protein_quest/pdbe_3dbeacons/: clustering.py  fetch.py  model.py  retrieve.py  search.py
src/protein_quest/sparql/: get_uniprot_details.rq  local-api-config.ini  search_alphafold.rq  search_complexes.rq  search_emdb.rq  search_pdb.rq  search_uniprot.rq
src/protein_quest/structure/: __init__.py  chains.py  convert.py  errors.py  files.py  formats.py  metadata.py  types.py  uniprot.py
tests/: conftest.py  test_cli.py  test_clustering.py  test_clustering_io.py  test_converter.py  test_emdb.py  test_filters.py  test_go.py  test_io.py  test_parallel.py  test_ss.py  test_structure.py  test_taxonomy.py  test_uniprot.py  test_uniprot_chains.py  test_utils.py
tests/alpafold/: test_density.py  test_entry_summary.py
tests/alphafold/: test_confidence.py  test_density.py  test_fetch.py
tests/cassettes/: test_search4af.yaml  test_search4emdb.yaml  test_search4pdb.yaml  test_search4taxon.yaml  test_search4uniprot.yaml
tests/cassettes/test_cli/: test_retrieve_alphafold_accepts_structure_search_csv.yaml  test_retrieve_pdbe_accepts_structure_search_csv.yaml  test_retrieve_pdbe_tar_mode.yaml  test_retrieve_pdbe_tar_mode_all_failed.yaml  test_retrieve_structure_happy_path.yaml  test_search_emdb.yaml  test_search_pdbe_bad_chain_length.yaml  (+3 more)
tests/cli/: __init__.py  test_cli.py  test_common.py  test_convert.py  test_filter.py  test_retrieve.py  test_search.py
tests/filters/: test_chain.py  test_combined.py  test_quality.py  test_residues.py  test_resolution.py  test_ss.py
tests/pdbe/: test_clustering.py  test_fetch.py  test_io.py  test_result.py  test_ws.py
tests/pdbe_3dbeacons/: test_clustering.py  test_fetch.py  test_retrieve.py  test_search.py
tests/structure/: test_chains.py  test_convert.py  test_files.py  test_formats.py  test_metadata.py  test_types.py  test_uniprot.py
(+45 files in other folders)
